<resources>
    <string name="app_name">SycFramework</string>
    <string name="login">登录</string>
    <string name="password_hint">密码</string>
    <string name="user_name">用户名</string>
    <string name="password_confirm_hint">确认密码</string>
    <string name="register">注册</string>
    <string name="add_new_account_title">标题</string>
    <string name="add_new_account_user_name">用户名</string>
    <string name="add_new_account_password">密码</string>
    <string name="add_new_account_save">保存</string>
    <string name="title_activity_login2">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
